$NetBSD: CHANGES-2023,v 1.6688 2023/11/06 10:42:36 wiz Exp $

Changes to the packages collection and infrastructure in 2023:

	Updated devel/R-cli to 3.5.0 [mef 2023-01-01]
	Updated devel/R-purrr to 1.0.0 [mef 2023-01-01]
	Updated www/R-webfakes to 1.1.6 [mef 2023-01-01]
	Updated devel/R-pkgcache to 2.0.4 [mef 2023-01-01]
	Updated devel/R-repr to 1.1.4 [mef 2023-01-01]
	Updated databases/R-dbplyr to 2.2.1 [mef 2023-01-01]
	Updated archivers/R-zip to 2.2.2 [mef 2023-01-01]
	Updated misc/R-pillar to 1.8.1 [mef 2023-01-01]
	Updated math/R-tibble to 3.1.8 [mef 2023-01-01]
	Updated databases/R-RSQLite to 2.2.20 [mef 2023-01-01]
	Updated net/dbip-asn-lite to 2023.01 [fcambus 2023-01-01]
	Updated net/dbip-city-lite to 2023.01 [fcambus 2023-01-01]
	Updated net/dbip-country-lite to 2023.01 [fcambus 2023-01-01]
	Added devel/breezy-qbrz version 0.4.1.0.1651 [rhialto 2023-01-01]
	Updated net/cppzmq to 4.9.0 [adam 2023-01-01]
	Updated mail/dovecot2 to 2.3.20 [adam 2023-01-01]
	Updated mail/dovecot2-pigeonhole to 0.5.20 [adam 2023-01-01]
	Updated sysutils/xfce4-cpugraph-plugin to 1.2.7 [gutteridge 2023-01-01]
	Updated x11/xfce4-session to 4.18.0 [gutteridge 2023-01-01]
	Updated sysutils/xfce4-systemload-plugin to 1.3.2 [gutteridge 2023-01-01]
	Updated x11/xfce4-settings to 4.18.1 [gutteridge 2023-01-01]
	Updated sysutils/xfce4-thunar to 4.18.1 [gutteridge 2023-01-01]
	Updated devel/xfce4-dev-tools to 4.18.0 [gutteridge 2023-01-01]
	Updated meta-pkgs/xfce4-extras to 4.18.0nb6 [gutteridge 2023-01-01]
	Updated meta-pkgs/xfce4 to 4.18.0nb1 [gutteridge 2023-01-01]
	Updated www/wiki-tui to 0.6.1 [pin 2023-01-01]
	Updated devel/meson to 1.0.0 [adam 2023-01-01]
	Updated x11/gtk3 to 3.24.36 [adam 2023-01-01]
	Updated textproc/py-xlsxwriter to 3.0.4 [adam 2023-01-01]
	Updated time/py-dateparser to 1.1.5 [adam 2023-01-01]
	Added devel/ruby-neovim version 0.9.0 [nikita 2023-01-01]
	Updated editors/xournalpp to 1.1.3 [wiz 2023-01-01]
	Added net/libsoup3 version 3.2.2 [wiz 2023-01-01]