@@ -1,26 +1,0 @@
-@comment $NetBSD: PLIST,v 1.2 2023/11/05 11:59:56 wiz Exp $
-${PYSITELIB}/${WHEEL_INFODIR}/LICENSE
-${PYSITELIB}/${WHEEL_INFODIR}/METADATA
-${PYSITELIB}/${WHEEL_INFODIR}/NOTICE
-${PYSITELIB}/${WHEEL_INFODIR}/RECORD
-${PYSITELIB}/${WHEEL_INFODIR}/WHEEL
-${PYSITELIB}/${WHEEL_INFODIR}/top_level.txt
-${PYSITELIB}/http_parser/__init__.py
-${PYSITELIB}/http_parser/__init__.pyc
-${PYSITELIB}/http_parser/__init__.pyo
-${PYSITELIB}/http_parser/_socketio.py
-${PYSITELIB}/http_parser/_socketio.pyc
-${PYSITELIB}/http_parser/_socketio.pyo
-${PYSITELIB}/http_parser/http.py
-${PYSITELIB}/http_parser/http.pyc
-${PYSITELIB}/http_parser/http.pyo
-${PYSITELIB}/http_parser/parser.so
-${PYSITELIB}/http_parser/pyparser.py
-${PYSITELIB}/http_parser/pyparser.pyc
-${PYSITELIB}/http_parser/pyparser.pyo
-${PYSITELIB}/http_parser/reader.py
-${PYSITELIB}/http_parser/reader.pyc
-${PYSITELIB}/http_parser/reader.pyo
-${PYSITELIB}/http_parser/util.py
-${PYSITELIB}/http_parser/util.pyc
-${PYSITELIB}/http_parser/util.pyo
